--- a/web-front/.gitignore
+++ b/web-front/.gitignore
@@ -1,7 +1,30 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Ignore node_modules folder
-node_modules/
+# Dependency directories
+/node_modules/
+.pnp/
+.pnp.js
+
+# Testing coverage
+/coverage/
+
+# Production build
+/build/
+
+# Environment variables
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# System files
+.DS_Store
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 
 # Ignore environment variables
 .env
